{
    "name": "GameInput",
    "maps": [
        {
            "name": "GenericActions",
            "id": "404ad226-e74c-4f35-9d18-5d533168754b",
            "actions": [
                {
                    "name": "TapAction",
                    "type": "PassThrough",
                    "id": "9e1b375f-7d10-44ae-9bf8-f8b89e797d21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e07af80e-93b3-4338-a4f7-ce4d430fe137",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "TouchScreen",
                    "action": "TapAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}